chore: Update fonts and styles for landing page
- Added a new font link for the Inter font family
- Updated the background color and text color for the "ver más" section
- Added a new section with an image and accompanying text

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Syne:wght@400..800&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.21.4/dist/css/uikit.min.css" />
     <link rel="stylesheet" href="./public/css/style.css">
     <link rel="icon" href="./public/img/s27-logo-chico.png" type="image/x-icon">
@@ -152,25 +153,26 @@
             </div>
         </div>
 
-    
+
 
         <div class="second-section">
+            <div class="img-section-two"></div>
 
             <div>
-                <div>
-
-                </div>
-
-                <div>
-                    <p>Somos fabricantes dedicados, nuestra inspiración va más allá del fútbol, abrazando la diversidad de los deportes. Reflejamos la excelencia en cada par de medias que creamos."</p>
-                    <p>"En S27 Medias, nuestra misión es clara: fusionar la pasión por el fútbol con la excelencia en la fabricación de medias. Con más de 30 años de experiencia, nos comprometemos a ofrecer productos de primera calidad que trascienden el campo de juego. Desde el fútbol hasta deportes como hockey, vóley y básquet, nuestra dedicación a la disciplina, el
-                        esfuerzo y el estilo impulsa cada paso que das con nuestras medias."</p>
-                    <div class="div-vermas">
-                        <div class="green-bar"></div>
-                        <a class="text-vermas" href="#">ver más</a>
-                    </div>
+                <p class="text-second-one">Somos fabricantes dedicados, nuestra inspiración va más allá del fútbol,
+                    abrazando la diversidad de los deportes. Reflejamos la excelencia en cada par de medias que
+                    creamos."</p>
+                <p class="text-second-two">"En S27 Medias, nuestra misión es clara: fusionar la pasión por el fútbol con
+                    la excelencia en la fabricación de medias. Con más de 30 años de experiencia, nos comprometemos a
+                    ofrecer productos de primera calidad que trascienden el campo de juego. Desde el fútbol hasta
+                    deportes como hockey, vóley y básquet, nuestra dedicación a la disciplina, el
+                    esfuerzo y el estilo impulsa cada paso que das con nuestras medias."</p>
+                <div class="div-vermas">
+                    <div class="green-bar"></div>
+                    <a class="text-vermas" href="#">ver más</a>
                 </div>
             </div>
+
 
         </div>
 
