Update second section background image and styles

--- a/index.html
+++ b/index.html
@@ -156,23 +156,32 @@
 
 
         <div class="second-section">
-            <div class="img-section-two"></div>
+            <div class="filter-section-two">
+                <div class="div-section-two">
+                    <div class="img-section-two"></div>
 
-            <div>
-                <p class="text-second-one">Somos fabricantes dedicados, nuestra inspiración va más allá del fútbol,
-                    abrazando la diversidad de los deportes. Reflejamos la excelencia en cada par de medias que
-                    creamos."</p>
-                <p class="text-second-two">"En S27 Medias, nuestra misión es clara: fusionar la pasión por el fútbol con
-                    la excelencia en la fabricación de medias. Con más de 30 años de experiencia, nos comprometemos a
-                    ofrecer productos de primera calidad que trascienden el campo de juego. Desde el fútbol hasta
-                    deportes como hockey, vóley y básquet, nuestra dedicación a la disciplina, el
-                    esfuerzo y el estilo impulsa cada paso que das con nuestras medias."</p>
-                <div class="div-vermas">
-                    <div class="green-bar"></div>
-                    <a class="text-vermas" href="#">ver más</a>
+                    <div>
+                        <p class="text-second-one">Somos fabricantes dedicados, nuestra inspiración va más allá del
+                            fútbol,
+                            abrazando la diversidad de los deportes. Reflejamos la excelencia en cada par de medias que
+                            creamos."</p>
+                        <p class="text-second-two">"En S27 Medias, nuestra misión es clara: fusionar la pasión por el
+                            fútbol
+                            con
+                            la excelencia en la fabricación de medias. Con más de 30 años de experiencia, nos
+                            comprometemos
+                            a
+                            ofrecer productos de primera calidad que trascienden el campo de juego. Desde el fútbol
+                            hasta
+                            deportes como hockey, vóley y básquet, nuestra dedicación a la disciplina, el
+                            esfuerzo y el estilo impulsa cada paso que das con nuestras medias."</p>
+                        <div class="div-vermas">
+                            <div class="green-bar"></div>
+                            <a class="text-vermas" href="#">ver más</a>
+                        </div>
+                    </div>
                 </div>
             </div>
-
 
         </div>
 
