Update second section background image and styles

--- a/index.html
+++ b/index.html
@@ -153,8 +153,6 @@
             </div>
         </div>
 
-
-
         <div class="second-section">
             <div class="filter-section-two">
                 <div class="div-section-two">
@@ -183,6 +181,32 @@
                 </div>
             </div>
 
+        </div>
+
+        <div class="container-words-snake">
+            <div class="container-snake">
+                <img class="img-snake" src="./public/img/snake-2.png" alt="">
+            </div>
+            <div class="container-words">
+                <div class="scroll">
+                    <div class="rightToLeft">
+                        <p>básquet · futbol · s27 · hockey · voley · básquet · futbol · s27 ·
+                            hockey · voley · básquet · futbol · s27 · hockey · voley ·</p>
+                        <p id='scroll'>básquet · futbol · s27 · hockey · voley · básquet · futbol · s27 ·
+                            hockey · voley · básquet · futbol · s27 · hockey · voley ·</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="third-section">
+            <div>
+                <h2>Nuestros<br>Productos<h2>
+            </div>
+
+            <div>
+                <table></table>
+            </div>
         </div>
 
     </main>
