Update styles for third and fourth sections

--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
     </header>
 
     <main>
-
         <div class="first-section">
 
             <div class="div-section">
@@ -201,13 +200,189 @@
 
         <div class="third-section">
             <div>
-                <h2>Nuestros<br>Productos<h2>
+                <h2 class="title-third-section">Nuestros<br>Productos<h2>
             </div>
 
-            <div>
-                <table></table>
+            <div class="div-cards">
+                <div class="sub-div-cards">
+                    <div class="card-main">
+                        <div class="mini-card">
+                            <img class="img-card" src="./public/img/img_1_section.jpg" alt="">
+                            <p class="p-card">rose-coleccion 2024</p>
+                        </div>
+                    </div>
+
+                    <div class="card-main">
+                        <div class="mini-card">
+                            <img class="img-card" src="./public/img/img_2_section.jpg" alt="">
+                            <p class="p-card">coleccion tenis</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="line-black"></div>
+
+                <div class="div-card-secundary">
+                    <div class="sub-div-card-secundary">
+                        <div id="metalic-blue-card" class="card-secundary">
+                            <div class="mini-card-secundary">
+                                <img class="img-card" src="./public/img/img_3_section.jpg" alt="">
+                                <p class="p-card">metalic blue</p>
+                            </div>
+                        </div>
+                        <div id="neon-card" class="card-secundary">
+                            <div class="mini-card-secundary">
+                                <img class="img-card" src="./public/img/img_4_section.jpg" alt="">
+                                <p class="p-card"> neon helmet</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="line-black-cards"></div>
+
+                    <div class="sub-div-card-secundary">
+                        <div id="hockey-card" class="card-secundary">
+                            <div class="mini-card-secundary">
+                                <img class="img-card" src="./public/img/img_5_section.jpg" alt="">
+                                <p class="p-card">hockey</p>
+                            </div>
+                        </div>
+
+                        <div id="ultra-card" class="card-secundary">
+                            <div class="mini-card-secundary">
+                                <img class="img-card" src="./public/img/img_6_section.jpg" alt="">
+                                <p class="p-card">ultra gim ii</p>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="line-black"></div>
+                </div>
             </div>
         </div>
+
+        <div class="container-words-snake">
+            <div class="container-snake">
+                <img class="img-snake" src="./public/img/snake-2.png" alt="">
+            </div>
+            <div class="container-words">
+                <div class="scroll">
+                    <div class="rightToLeft">
+                        <p>básquet · futbol · s27 · hockey · voley · básquet · futbol · s27 ·
+                            hockey · voley · básquet · futbol · s27 · hockey · voley ·</p>
+                        <p id='scroll'>básquet · futbol · s27 · hockey · voley · básquet · futbol · s27 ·
+                            hockey · voley · básquet · futbol · s27 · hockey · voley ·</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="fourth-section">
+            <div class="div-fourth-section">
+                <div class="cards-carrousel">
+                    <img src="./public/img/carrousel_img_1.jpg" alt="" class="img-carrousel">
+                </div>
+                <div id="img-carrousel-2" class="cards-carrousel">
+                    <img src="./public/img/carrousel_img_2.png" alt="" class="img-carrousel">
+                </div>
+                <div class="cards-carrousel">
+                    <img src="./public/img/carrousel_img_3.png" alt="" class="img-carrousel">
+                </div>
+            </div>
+        </div>
+
+        <div class="fifth-section">
+            <div class="div-fifth-section">
+                <div class="div-title-idea">
+                    <h2 class="h2-idea">fabricamos<br>tus ideas</h2>
+                    <p class="text-idea">necesitas<br>medias para<br>tu equipo?</p>
+                </div>
+
+                <div class="div-process-idea">
+                    <div class="line-white"></div>
+                    <p class="p-idea">1 envianos un mensaje</p>
+                    <div class="line-white"></div>
+                    <p class="p-idea">2 proceso de diseño y presupuesto</p>
+                    <div class="line-white"></div>
+                    <p class="p-idea">3 fabricación final</p>
+                    <div class="line-white"></div>
+                    <p class="p-idea">4 tu equipo con medias nuevas</p>
+                    <div class="line-white"></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-words-snake">
+            <div class="container-snake">
+                <img class="img-snake" src="./public/img/snake-2.png" alt="">
+            </div>
+            <div class="container-words">
+                <div class="scroll">
+                    <div class="rightToLeft">
+                        <p>básquet · futbol · s27 · hockey · voley · básquet · futbol · s27 ·
+                            hockey · voley · básquet · futbol · s27 · hockey · voley ·</p>
+                        <p id='scroll'>básquet · futbol · s27 · hockey · voley · básquet · futbol · s27 ·
+                            hockey · voley · básquet · futbol · s27 · hockey · voley ·</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="sixth-section">
+            <div class="div-sixth-section">
+                <div class="div-title-dev">
+                    <h2 class="h2-dev">desarrollamos<br>medias desde 0</h2>
+                    <p class="text-dev">somos<br>los mejores</p>
+                    <img class="img-qr" src="./public/img/qr_photo.png" alt="">
+                </div>
+
+                <div class="div-dev">
+                    <div class="sub-div-dev">
+                        <div class="dev-card">
+                            <img class="img-dev" src="./public/img/dev-1.png" alt="">
+                            <div class="display-flex">
+                                <h3 class="title-dev">nuestra<br>experiencia</h3>
+                                <p class="text-dev">"Neque porr quisquam est qui dolorem ipsum quia dolor sit amet,
+                                    consectetur, adipisci
+                                    velit..."</p>
+                            </div>
+                        </div>
+                        <div class="dev-card">
+                            <img class="img-dev" src="./public/img/dev-2.png" alt="">
+                            <div class="display-flex">
+                                <h3 class="title-dev">las mejores<br>maquinas</h3>
+                                <p class="text-dev">"Neque porr quisquam est qui dolorem ipsum quia dolor sit amet,
+                                    consectetur, adipisci
+                                    velit..."</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="sub-div-dev">
+                        <div class="dev-card">
+                            <img class="img-dev" src="./public/img/dev-3.png" alt="">
+                            <div class="display-flex">
+                                <h3 class="title-dev">calidad 100%<br>premium</h3>
+                                <p class="text-dev">"Neque porr quisquam est qui dolorem ipsum quia dolor sit amet,
+                                    consectetur, adipisci
+                                    velit..."</p>
+                            </div>
+                        </div>
+                        <div class="dev-card">
+                            <img class="img-dev" src="./public/img/dev-4.png" alt="">
+                            <div class="display-flex">
+                                <h3 class="title-dev">nuestro<br>proceso de<br>desarrollo</h3>
+                                <p class="text-dev">"Neque porr quisquam est qui dolorem ipsum quia dolor sit amet,
+                                    consectetur, adipisci
+                                    velit..."</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
 
     </main>
 
