Update styles for third and fourth sections

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                             <img class="img-dev" src="./public/img/dev-1.png" alt="">
                             <div class="display-flex">
                                 <h3 class="title-dev">nuestra<br>experiencia</h3>
-                                <p class="text-dev">"Neque porr quisquam est qui dolorem ipsum quia dolor sit amet,
+                                <p class="d-card">"Neque porr quisquam est qui dolorem ipsum quia dolor sit amet,
                                     consectetur, adipisci
                                     velit..."</p>
                             </div>
@@ -352,7 +352,7 @@
                             <img class="img-dev" src="./public/img/dev-2.png" alt="">
                             <div class="display-flex">
                                 <h3 class="title-dev">las mejores<br>maquinas</h3>
-                                <p class="text-dev">"Neque porr quisquam est qui dolorem ipsum quia dolor sit amet,
+                                <p class="d-card">"Neque porr quisquam est qui dolorem ipsum quia dolor sit amet,
                                     consectetur, adipisci
                                     velit..."</p>
                             </div>
@@ -363,7 +363,7 @@
                             <img class="img-dev" src="./public/img/dev-3.png" alt="">
                             <div class="display-flex">
                                 <h3 class="title-dev">calidad 100%<br>premium</h3>
-                                <p class="text-dev">"Neque porr quisquam est qui dolorem ipsum quia dolor sit amet,
+                                <p class="d-card">"Neque porr quisquam est qui dolorem ipsum quia dolor sit amet,
                                     consectetur, adipisci
                                     velit..."</p>
                             </div>
@@ -372,7 +372,7 @@
                             <img class="img-dev" src="./public/img/dev-4.png" alt="">
                             <div class="display-flex">
                                 <h3 class="title-dev">nuestro<br>proceso de<br>desarrollo</h3>
-                                <p class="text-dev">"Neque porr quisquam est qui dolorem ipsum quia dolor sit amet,
+                                <p class="d-card">"Neque porr quisquam est qui dolorem ipsum quia dolor sit amet,
                                     consectetur, adipisci
                                     velit..."</p>
                             </div>
@@ -383,6 +383,57 @@
             </div>
         </div>
 
+        <div class="container-words-snake">
+            <div class="container-snake">
+                <img class="img-snake" src="./public/img/snake-2.png" alt="">
+            </div>
+            <div class="container-words">
+                <div class="scroll">
+                    <div class="rightToLeft">
+                        <p>básquet · futbol · s27 · hockey · voley · básquet · futbol · s27 ·
+                            hockey · voley · básquet · futbol · s27 · hockey · voley ·</p>
+                        <p id='scroll'>básquet · futbol · s27 · hockey · voley · básquet · futbol · s27 ·
+                            hockey · voley · básquet · futbol · s27 · hockey · voley ·</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <footer>
+            <div class="div-footer">
+                <div class="sub-div-footer">
+                    <div>
+                        <p>envianos tu consulta a <br>nuestro email</p>
+                        <div class="">
+                            <a href="mailto:S27consultas@gmail.com">
+                            <img src="/public/img/logo_mail.png" alt="">
+                            <p>S27consultas@gmail.com</p>
+                            </a>
+                        </div>
+                    </div>
+                    
+                    <div>
+                        <p>seguinos en</p>
+                        <div>
+                            <a class="a-footer" href="https://www.facebook.com/profile.php?id=100090422986695">
+                                <img class="img-footer-social" src="/public/img/logo_facebook.png" alt="">
+                            </a>
+                            <a class="a-footer" href="https://www.instagram.com/s27medias_/">
+                                <img class="img-footer-social" src="/public/img/logo_instagram.png" alt="">
+                            </a>
+                            <a class="a-footer" href="#">
+                                <img class="img-footer-social" src="./public/img/logo_x.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="sub-div-footer">
+                    
+                </div>
+            </div>
+        </footer>
 
     </main>
 
